--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "responsive2.0",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Princenick-BL.github.io/responsive2.0",
+  "homepage": "https://princenick-bl.github.io/responsive2.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
